Programación/AppJavaFx/ITV_TEST/src/main/kotlin/errors/SpecialtyError.kt
package errors

sealed class SpecialtyError(val message: String) {
    object SpecialtyNotFound: SpecialtyError("Error Specialty not found")
}